<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_json</name>
  <version>0.0.1</version>
  <description>tuw_json helps to read and write msgs in json format</description>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <build_depend>tuw_object_msgs</build_depend>
  <build_depend>tuw_graph_msgs</build_depend>
  <build_depend>tuw_object_map_msgs</build_depend>
  <build_depend>libjsoncpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>libjsoncpp</build_export_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
